--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,3 +1,9 @@
 name: MobLoot
 version: '${version}'
+api-version: '1.19'
 main: me.penguin.mobloot.MobLoot
+commands:
+  mobloot:
+    description: Reloads the MobLoot config file.
+    usage: /mobloot reload
+    aliases: [ml]
